--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, illo.</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit in unde mollitia nemo quibusdam beatae odit enim ea quis. Dolor quo, neque qui tenetur quae id facilis ad ullam labore.</p>
+    <ul>
+        <li>Home</li>
+        <li>About Us</li>
+        <li>Contact Us</li>
+    </ul>
 </body>
 </html>
